# pico_stimote

./: .gitignore  CMakeLists.txt  Makefile  README.md  clk_ext.pio  cmp_ext.pio  dac121s101.pio  gen_inst.py  light_meas.py  pico.py  pico_scan.py  scan.csv  stimote_control.c  stimote_inst.py  stream_monitor.pio  translate.py
testbench/: 221117_dac_refh_powerdown.py  221117_microbot_isc.py  221117_microbot_light_program.py  221201_pico_board_dac.py  221206_dac_characterization.py  230101_clk_test.py  230101_stream_test.py  230102_stimote_stimq_sweep.py  230103_pico_scan_test.py  230103_stimote_stimq_sweep.py  230106_stimote_scan_change_tstimcomp.py  230107_stimote_moncap_stimq.py  230110_dac_set_code.py  test.py  test_pico.py  test_sourcemeter.py
